--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Rwd</h1>
+        <h1>RWD</h1>
         <h2>Responsive Web Design Demo</h2>
         <a href="https://github.com/sinh/rwd" class="button"><small>View project on</small>GitHub</a>
       </div>
