--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Rwd by sinh</title>
+    <title>Responsive Web Design demo</title>
   </head>
 
   <body>
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>RWD</h1>
         <h2>Responsive Web Design Demo</h2>
-        <a href="https://github.com/sinh/rwd" class="button"><small>View project on</small>GitHub</a>
+        <a href="#" class="button"><small>Tạo bởi</small>SinhNX</a>
       </div>
     </header>
 
